# todoapp

./: .gitignore  .pylintrc  README.md  manage.py  pyproject.toml
frontend/static/: index.css  index.js  listings.css  listings.js  register.css  register.js
frontend/templates/: index.html  listings.html  register.html
src/: settings.py  urls.py
src/app/: admin.py  models.py  tests.py  urls.py  views.py
src/app/migrations/: 0001_initial.py
